<resources>
    <string name="app_name">ULAS</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_time_table">TimeTable</string>
    <string name="title_activity_online">Online</string>
    <string name="title_activity_teachers">Teachers</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="zoom">Zoom</string>
    <string name="time_table">Time Table</string>
    <string name="online">Online</string>
    <string name="teachers_info">Teachers info</string>
    <string name="icon_m">icon_m</string>
    <string name="Algorithms">Алгоритмы</string>
    <string name="Makarova">Макарова Л.М</string>
    <string name="Latanskaia">Латанская</string>
    <string name="Makarova1">Макарова Л.М</string>
    <string name="assembler">Assembler</string>
    <string name="database">Базы данных</string>
    <string name="java">Java</string>
    <string name="Berkut">Беркунский Е.Ю</string>
    <string name="google_meet">Google Meet</string>
    <string name="Nakonechni">Наконечный</string>
    <string name="base">Основы</string>
    <string name="energisafe">энергосбережения</string>
    <string name="library">Library</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>